--- a/absen.html
+++ b/absen.html
@@ -16,7 +16,7 @@
         .btn { padding: 12px 25px; border-radius: 30px; border: none; font-weight: bold; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.5); font-size: 14px; }
         .btn-kirim { background: #00e676; color: #003300; display: none; width: 80%; max-width: 300px; padding: 15px; font-size: 16px; animation: pulse 2s infinite;}
         .btn-back { background: rgba(211, 47, 47, 0.9); color: white; }
-        .btn-cam { background: rgba(255,171,0, 0.9); color: #000; }
+        .btn-cam { background: rgba(255,255,255,0.2); color: white; backdrop-filter: blur(5px); }
         #loading { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 18px; font-weight: bold; z-index: 5; background: rgba(0,0,0,0.7); padding: 20px; border-radius: 10px; }
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.05); } 100% { transform: scale(1); } }
 
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <div id="loading">⏳ Memuat Sistem Wajah...</div>
+    <div id="loading">⏳ Menghubungkan ke Cloud...</div>
     <div class="info-bar">
         <span id="namaKelas">...</span>
         <span id="counter" style="color: #00e676;">0 Siswa</span>
@@ -89,16 +89,43 @@
     };
 
     async function loadDataWajah(namaKelas) {
-        const namaFile = namaKelas.replace(/\s+/g, '-') + ".json";
+        document.getElementById('loading').innerText = "⏳ Mengunduh Data Wajah...";
+        
         try {
-            const res = await fetch(`./data_wajah/${namaFile}`);
-            if(!res.ok) throw new Error("Data wajah belum ada.");
-            const data = await res.json();
-            const labeled = data.map(s => new faceapi.LabeledFaceDescriptors(s.label, s.descriptors.map(d=>new Float32Array(d))));
+            // LOAD DARI FIRESTORE COLLECTION 'data_wajah'
+            // ID Dokumen = Nama Kelas (Sama persis)
+            const docRef = db.collection('data_wajah').doc(namaKelas);
+            const docSnap = await docRef.get();
+
+            if (!docSnap.exists) {
+                alert("⚠ Data wajah kelas ini belum direkam oleh Admin.");
+                window.location.href="index.html";
+                return;
+            }
+
+            const data = docSnap.data().faces;
+            if(!data || data.length === 0) {
+                alert("⚠ Data wajah kosong.");
+                window.location.href="index.html";
+                return;
+            }
+
+            // Convert data dari Firestore ke FaceAPI Matcher
+            const labeled = data.map(s => {
+                const floatArray = s.descriptors.map(d => new Float32Array(d));
+                return new faceapi.LabeledFaceDescriptors(s.label, floatArray);
+            });
+
             faceMatcher = new faceapi.FaceMatcher(labeled, 0.50);
+            
             document.getElementById('loading').style.display = 'none';
-            startVideo(); deteksiLoop();
-        } catch (err) { alert(err.message); window.location.href="index.html"; }
+            startVideo(); 
+            deteksiLoop();
+
+        } catch (err) { 
+            alert(err.message); 
+            window.location.href="index.html"; 
+        }
     }
 
     async function startVideo() {
